# lbm_eval

./: .dockerignore  pyproject.toml
docker/: DOCKER_PUBLISH_GUIDE.md  DOCKER_USAGE.md  Dockerfile  build.sh  entrypoint.sh  launch_sim.sh  publish_to_dockerhub.py  publish_to_ecr.py  run_inference_bundle.sh
lbm_eval/: evaluate.py  video_recorder.py
robot_gym/: policy.py
