[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbm_eval"
version = "1.1.0"
dependencies = [
    "boto3",
    "dill",
    "drake>=1.44,<1.45",
    "grpcio",
    "gymnasium",
    "h5py",
    "numpy",
    "opencv-python",
    "protobuf",
    "PyYAML",
    "tqdm",
]

[project.scripts]
evaluate = "lbm_eval.evaluate:main"
wave_around_policy_server = "grpc_workspace.wave_around_policy_server:main"

[tool.setuptools.packages.find]
include = ["lbm_eval*", "anzu*", "robot_gym*", "grpc_workspace*"]
namespaces = true

[tool.setuptools.package-data]
"anzu" = ["package.xml"]
"anzu.intuitive.skill_types" = ["*.txt", ".empty"]
"anzu.intuitive.visuomotor.demo" = ["*.yaml"]
"grpc_workspace.proto" = ["*.proto"]
